--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.13.3",
     "json-fs-store": "^1.0.0",
     "jsonfile": "^2.2.3",
+    "redis": "^2.4.2",
     "socket.io": "^1.3.7",
-    "socket.io-client": "^1.3.7"
+    "socket.io-client": "^1.3.7",
+    "zepto": "^1.0.1"
   }
 }
